fix: chat width broken in tetherspecial page

--- a/src/shared/ui/promolandings/landing-calculation/landing-calculation.scss
+++ b/src/shared/ui/promolandings/landing-calculation/landing-calculation.scss
@@ -239,6 +239,8 @@
     }
   }
   &__chat{
+    border-radius: var(--spacing-m-1);
+    overflow: hidden;
     @media screen and (max-width: 767px) {
       display: none;
     }
@@ -424,6 +426,26 @@
         margin-top: var(--spacing-m-2);
         width: 100%;
       }
+    }
+  }
+
+  &__divider{
+    display: flex;
+    align-items: center;
+    color: var(--text-tertiary);
+    margin:  torem(32, 0);
+    &:before,&:after{
+      display: block;
+      height: 1px;
+      content: '';
+      background: var(--surfaces-border-2);
+      width: 100%;
+    }
+    &:before{
+      margin-right: torem(16);
+    }
+    &:after{
+      margin-left: torem(16);
     }
   }
 
